tdf#106678 Implement CSV filter option's 8th token

... which decides whether number cells are stored as numbers
or quoted like strings, as documented in
<https://wiki.openoffice.org/wiki/Documentation/DevGuide/Spreadsheets/Filter_Options#Token_8.2C_csv_export>
but long unimplemented.

Note that in this implementation the false value of the above token
is superseded and ignored if either "Fixed column width" (1st token)
or "Save cell content as shown" (9th token) option is on.

Change-Id: Ib4ff02a2be81a8590e1fc249725f02cd83e91118